k8s/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: warden-auth
  namespace: warden
spec:
  selector:
    app: warden-auth
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
